--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -335,14 +335,14 @@ header {
   background-color: #fff;
   color: #2b30a7;
 }
-.hover-colored-btn:hover > .fourth__col span:first-child{
+.hover-colored-btn:hover > .fourth__col span{
   color: #fff;
 }
 .hover-colored-btn:hover > .leader__back{
   background-color: #fff;
   color: #2b30a7;
 }
-.hover-colored-btn:hover > .leader__col span:first-child{
+.hover-colored-btn:hover > .leader__col span{
   color: #fff;
 }
 .second__col{
@@ -883,7 +883,7 @@ left: 0;
 .ph2 {
   border-radius: 17px;
   height: 520px;
-  bottom: 0;
+  bottom: -70px;
   position: absolute;
   right: 70px;
 }
@@ -1804,21 +1804,8 @@ footer {
   margin-top: 1px;
 }
 
-.leader__active {
-  background-color: #2B30A7;
-}
-
-.leader__active .leader__back {
-  background-color: #fff;
-  color: #2B30A7;
-}
-
 .leader__wrapper .leader__block:not(:last-child) {
   margin-bottom: 18px;
-}
-
-.leader__active .leader__col span:first-child {
-  color: #fff;
 }
 
 .welcome__sect {
@@ -1868,6 +1855,8 @@ footer {
 .top__sect {
   background-color: #F6F6F6;
   padding: 75px 0;
+  position: relative;
+  z-index: 10;
 }
 
 .top__block {
@@ -2011,6 +2000,37 @@ footer {
           font-feature-settings: "liga" off;
   margin-top: 23px;
   color: #4988FF;
+}
+.second__col{
+  position: relative;
+}
+
+.object__hover{
+  opacity: 0;
+  text-align: center;
+  position: absolute;
+  top: 15px;
+  left: 55px;
+  font-size: 14px;
+  color: #fff;
+  padding: 10px 15px;
+  background-color: #9ba0de;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+@media (max-width: 730px){
+  .object__hover{
+    left: 34%;
+  }
+}
+@media (max-width: 500px){
+  .object__hover{
+    left: 25%;
+  }
+}
+.second__col:hover > .object__hover{
+  transition: 0.3s;
+  opacity: 1;
 }
 
 .fourth__back {
@@ -2208,10 +2228,11 @@ footer {
 }
 
 .footer__wh {
+  width: fit-content;
   font-weight: 600;
   font-size: 14.946px;
   line-height: 35px;
-  padding: 2px 7px;
+  padding: 2px 13px;
   -webkit-font-feature-settings: "liga" off;
           font-feature-settings: "liga" off;
   color: #FFFFFF;
@@ -2225,13 +2246,13 @@ footer {
           align-items: center;
 }
 
-.footer__wh svg {
-  margin-right: 2px;
+.footer__last svg {
+  margin-right: 6px;
 }
-
 .footer__last {
   background: #0085FF;
   margin-top: 15px;
+
 }
 
 .f__last {
@@ -2424,7 +2445,6 @@ footer {
   }
   .ph2{
     height: 320px;
-    bottom: -50px;
   }
   .first__left,
 .fourth__left,
@@ -2583,9 +2603,7 @@ footer {
   .object__wrapper .row .col-3 {
     width: 50%;
   }
-  .ph2{
-    bottom: -15px;
-  }
+
   .leader__sect,
 .welcome__sect,
 .top__sect,
@@ -2823,9 +2841,10 @@ footer {
 backdrop-filter: blur(2px);
 padding: 10px;
 width: 100%;
-height: 37px;
+height: 45px;
 left: 0;
 text-align: center;
+line-height: normal;
 bottom: 0;
 border-radius: 0  0 10px 10px;
 }
@@ -3013,7 +3032,7 @@ border-radius: 0  0 10px 10px;
     top: 90px;
   }
   .footer__left .logo{
-    margin-bottom: 130px;
+    margin-bottom: 110px;
   }
   .second__wrapper .row .col-20 .second__text{
     max-width: 160px;
